tests/ui/type-alias-impl-trait/auto-trait-leakage3.stderr
error[E0391]: cycle detected when type-checking `m::bar`
  --> $DIR/auto-trait-leakage3.rs:13:9
   |
LL |         is_send(foo());
   |         ^^^^^^^^^^^^^^
   |
   = note: ...which requires evaluating trait selection obligation `m::Foo: core::marker::Send`...
note: ...which requires computing type of opaque `m::Foo::{opaque#0}`...
  --> $DIR/auto-trait-leakage3.rs:7:20
   |
LL |     pub type Foo = impl std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^
   = note: ...which again requires type-checking `m::bar`, completing the cycle
   = note: cycle used when running analysis passes on this crate
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
